--- a/.env.development
+++ b/.env.development
@@ -1,4 +1,11 @@
 #Comentario en env
 #Conexion a MongoDB
-
 uri_mongo=mongodb://localhost:27017/vuelos
+
+#JWT
+JWT_SECRET=CL4V3secreta@apiquito
+JWT_EXPIRATION_TIME=12h
+
+#API
+API_PORT=3000
+API_URL=http://apivuelos.com
