--- a/package.json
+++ b/package.json
@@ -23,7 +23,9 @@
     "@nestjs/common": "^10.0.0",
     "@nestjs/config": "^3.2.0",
     "@nestjs/core": "^10.0.0",
+    "@nestjs/jwt": "^10.2.0",
     "@nestjs/mongoose": "^10.0.4",
+    "@nestjs/passport": "^10.0.3",
     "@nestjs/platform-express": "^10.0.0",
     "@nestjs/swagger": "^7.3.0",
     "bcrypt": "^5.1.1",
@@ -31,6 +33,7 @@
     "class-validator": "^0.14.1",
     "mongoose": "^8.2.1",
     "mongoose-autopopulate": "^1.1.0",
+    "passport-jwt": "^4.0.1",
     "reflect-metadata": "^0.2.0",
     "rxjs": "^7.8.1",
     "swagger-ui-express": "^5.0.0"
