--- a/package.json
+++ b/package.json
@@ -33,7 +33,9 @@
     "class-validator": "^0.14.1",
     "mongoose": "^8.2.1",
     "mongoose-autopopulate": "^1.1.0",
+    "passport": "^0.7.0",
     "passport-jwt": "^4.0.1",
+    "passport-local": "^1.0.0",
     "reflect-metadata": "^0.2.0",
     "rxjs": "^7.8.1",
     "swagger-ui-express": "^5.0.0"
