--- a/.env.development
+++ b/.env.development
@@ -1,6 +1,6 @@
 #Comentario en env
 #Conexion a MongoDB
-uri_mongo=mongodb://localhost:27017/vuelos
+uri_mongo=mongodb://localhost:27017/bv
 
 #JWT
 JWT_SECRET=CL4V3secreta@apiquito
@@ -8,4 +8,4 @@ JWT_EXPIRATION_TIME=12h
 
 #API
 API_PORT=3000
-API_URL=http://apivuelos.com
+API_URL=http://apicoches.com
